# goalmodeling

./: README.md  pyproject.toml
goalmodeling/: __init__.py  examples.py  schema.py
transcript/: aggregator.py
